# hydroponics-suite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hydroponic_suite_auto_set_url.cmake
controller/: CMakeLists.txt  controller.cpp  controller.h  controller.pio
controller/controllers/: LightController.cpp  LightController.h  ValveController.cpp  ValveController.h
controller/internal/: CycleCalculator.cpp  CycleCalculator.h  IrrigationManager.cpp  IrrigationManager.h  Plant.cpp  Plant.h  PlantCluster.h  ValveManager.cpp  ValveManager.h
controller/io/: AnalogOutput.h  IO.h  LightController.cpp  LightController.h  TimedOutput.cpp  TimedOutput.h  ValveController.h
valve_controller/: CMakeLists.txt  valve_controller.cpp  valve_controller.h  valve_controller.pio
valve_controller/io/: AnalogIO.cpp  AnalogIO.h  AnalogOutput.cpp  AnalogOutput.h  IO.h
valve_controller/socket_client/: socket_client.cpp  socket_client.h
